Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1276,7 +1276,7 @@
   "pli-tv-kd14:14.31.5": "A competent and capable monk should then inform those monks: ",
   "pli-tv-kd14:14.31.6": "‘Please, Venerables, I ask you to listen. ",
   "pli-tv-kd14:14.31.7": "The monk so-and-so remembers an offense—he reveals it, makes it plain, and confesses it. ",
-  "pli-tv-kd14:14.31.8": "If it seems appropriate to you, I will receive the confession.’ ",
+  "pli-tv-kd14:14.31.8": "If it seems appropriate to you, I’ll receive the confession.’ ",
   "pli-tv-kd14:14.31.9": "And he should say: ",
   "pli-tv-kd14:14.31.10": "‘Do you recognize the offense?’ —",
   "pli-tv-kd14:14.31.11": "‘Yes, I recognize it.’ —",
