--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1292,7 +1292,7 @@
   "pli-tv-kd14:14.31.24": "When a legal issue has been resolved like this, if the receiver of the confession reopens it, he incurs an offense entailing confession for the reopening. ",
   "pli-tv-kd14:14.32.1": "If this is what happens, all is well. ",
   "pli-tv-kd14:14.32.2": "If not, that monk should approach the Sangha, put his upper robe over one shoulder, pay respect at the feet of the senior monks, squat on his heels, raise his joined palms, and say, ",
-  "pli-tv-kd14:14.32.3": "‘Venerables, I have committed such-and-such an offense. ",
+  "pli-tv-kd14:14.32.3": "‘Venerables, I’ve committed such-and-such an offense. ",
   "pli-tv-kd14:14.32.4": "I confess it.’ ",
   "pli-tv-kd14:14.32.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:14.32.6": "‘Please, Venerables, I ask the Sangha to listen. ",
