--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -1297,7 +1297,7 @@
   "pli-tv-kd14:14.32.5": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd14:14.32.6": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd14:14.32.7": "The monk so-and-so remembers an offense—he reveals it, makes it plain, and confesses it. ",
-  "pli-tv-kd14:14.32.8": "If it seems appropriate to the Sangha, I will receive the confession.’ ",
+  "pli-tv-kd14:14.32.8": "If it seems appropriate to the Sangha, I’ll receive the confession.’ ",
   "pli-tv-kd14:14.32.9": "And he should say: ",
   "pli-tv-kd14:14.32.10": "‘Do you recognize the offense?’ —",
   "pli-tv-kd14:14.32.11": "‘Yes, I recognize it.’ —",
