--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.85:3.1": "„Ist es wirklich wahr, Yamaka, dass du solch einen schädlichen Irrglauben hast: ",
   "sn22.85:3.2": "‚Wie ich die Lehre des Buddha verstehe, wird ein Mönch, der die Befleckungen aufgelöst hat, vernichtet und zerstört, wenn sein Körper auseinanderbricht, und besteht nach dem Tod nicht fort‘?“",
   "sn22.85:3.3": "„Ja, werte Freunde, so verstehe ich die Lehre des Buddha.“ ",
-  "sn22.85:4.1": "„Sag das nicht, Yamaka! Stell den Buddha nicht falsch dar, denn es ist nicht gut, den Buddha falsch darzustellen. Und der Buddha würde das nicht sagen.“ "
+  "sn22.85:4.1": "„Sag das nicht, Yamaka! Stell den Buddha nicht falsch dar, denn es ist nicht gut, den Buddha falsch darzustellen. Und der Buddha würde das nicht sagen.“ ",
+  "sn22.85:4.3": "Doch obwohl er von den Mönchen und Nonnen so ermahnt wurde, hielt Yamaka eigensinnig an seinem schädlichen Irrglauben fest und bestand darauf. "
 }
