--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.85:3.3": "„Ja, werte Freunde, so verstehe ich die Lehre des Buddha.“ ",
   "sn22.85:4.1": "„Sag das nicht, Yamaka! Stell den Buddha nicht falsch dar, denn es ist nicht gut, den Buddha falsch darzustellen. Und der Buddha würde das nicht sagen.“ ",
   "sn22.85:4.3": "Doch obwohl er von den Mönchen und Nonnen so ermahnt wurde, hielt Yamaka eigensinnig an seinem schädlichen Irrglauben fest und bestand darauf. ",
-  "sn22.85:5.1": "Als diese Mönche und Nonnen nicht in der Lage waren, Yamaka von diesem schädlichen Irrglauben abzubringen, erhoben sie sich von ihren Sitzen und gingen zum Ehrwürdigen Sāriputta. Sie berichteten ihm die Begebenheit und sagten: "
+  "sn22.85:5.1": "Als diese Mönche und Nonnen nicht in der Lage waren, Yamaka von diesem schädlichen Irrglauben abzubringen, erhoben sie sich von ihren Sitzen und gingen zum Ehrwürdigen Sāriputta. Sie berichteten ihm die Begebenheit und sagten: ",
+  "sn22.85:5.4": "„Dass doch der Ehrwürdige Sāriputta aus Anteilnahme zu dem Mönch Yamaka gehe.“ "
 }
