Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.85:4.3": "Doch obwohl er von den Mönchen und Nonnen so ermahnt wurde, hielt Yamaka eigensinnig an seinem schädlichen Irrglauben fest und bestand darauf. ",
   "sn22.85:5.1": "Als diese Mönche und Nonnen nicht in der Lage waren, Yamaka von diesem schädlichen Irrglauben abzubringen, erhoben sie sich von ihren Sitzen und gingen zum Ehrwürdigen Sāriputta. Sie berichteten ihm die Begebenheit und sagten: ",
   "sn22.85:5.4": "„Dass doch der Ehrwürdige Sāriputta aus Anteilnahme zu dem Mönch Yamaka gehe.“ ",
-  "sn22.85:5.5": "Sāriputta schwieg zum Zeichen der Zustimmung. "
+  "sn22.85:5.5": "Sāriputta schwieg zum Zeichen der Zustimmung. ",
+  "sn22.85:5.6": "Da kam der Ehrwürdige Sāriputta am späten Nachmittag aus seiner Klausur, ging zum Ehrwürdigen Yamaka und tauschte Willkommensgrüße mit ihm aus. Als er sich zur Seite hingesetzt hatte, sagte er zu Yamaka: "
 }
