--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.85:6.3": "„Ja, werter Freund, so verstehe ich die Lehre des Buddha.“ ",
   "sn22.85:7.1": "„Was denkst du, Yamaka? ",
   "sn22.85:7.2": "Ist Form beständig oder unbeständig?“ ",
-  "sn22.85:7.3": "„Unbeständig, werter Freund.“ "
+  "sn22.85:7.3": "„Unbeständig, werter Freund.“ ",
+  "sn22.85:7.4": "„Ist Gefühl …“ … "
 }
