--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn22.85:7.1": "„Was denkst du, Yamaka? ",
   "sn22.85:7.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.85:7.3": "„Unbeständig, werter Freund.“ ",
-  "sn22.85:7.4": "„Ist Gefühl …“ … "
+  "sn22.85:7.4": "„Ist Gefühl …“ … ",
+  "sn22.85:7.5": "„Ist Wahrnehmung …“ … "
 }
