Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.85:7.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.85:7.3": "„Unbeständig, werter Freund.“ ",
   "sn22.85:7.4": "„Ist Gefühl …“ … ",
-  "sn22.85:7.5": "„Ist Wahrnehmung …“ … "
+  "sn22.85:7.5": "„Ist Wahrnehmung …“ … ",
+  "sn22.85:7.6": "„Sind Entscheidungen …“ … "
 }
