Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.85:7.5": "„Ist Wahrnehmung …“ … ",
   "sn22.85:7.6": "„Sind Entscheidungen …“ … ",
   "sn22.85:7.7": "„Ist Bewusstsein beständig oder unbeständig?“ ",
-  "sn22.85:7.8": "„Unbeständig, werter Freund.“ "
+  "sn22.85:7.8": "„Unbeständig, werter Freund.“ ",
+  "sn22.85:7.9": "„Daher solltest du jegliche Art … sehen … "
 }
