--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -30,5 +30,6 @@
   "sn22.85:7.8": "„Unbeständig, werter Freund.“ ",
   "sn22.85:7.9": "„Daher solltest du jegliche Art … sehen … ",
   "sn22.85:7.10": "Wenn er das sieht … ",
-  "sn22.85:7.11": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ "
+  "sn22.85:7.11": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
+  "sn22.85:8.1": "„Was denkst du, werter Yamaka? "
 }
