--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.85:7.10": "Wenn er das sieht … ",
   "sn22.85:7.11": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘ ",
   "sn22.85:8.1": "„Was denkst du, werter Yamaka? ",
-  "sn22.85:8.2": "Siehst du den Klargewordenen als Form an?“ "
+  "sn22.85:8.2": "Siehst du den Klargewordenen als Form an?“ ",
+  "sn22.85:8.3": "„Nein, werter Freund.“ "
 }
