Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.85:8.2": "Siehst du den Klargewordenen als Form an?“ ",
   "sn22.85:8.3": "„Nein, werter Freund.“ ",
   "sn22.85:8.4": "„Siehst du den Klargewordenen als Gefühl an?“ … ",
-  "sn22.85:8.6": "„Siehst du den Klargewordenen als Wahrnehmung an?“ … "
+  "sn22.85:8.6": "„Siehst du den Klargewordenen als Wahrnehmung an?“ … ",
+  "sn22.85:8.7": "„Siehst du den Klargewordenen als Entscheidungen an?“ … "
 }
