--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "sn22.85:8.4": "„Siehst du den Klargewordenen als Gefühl an?“ … ",
   "sn22.85:8.6": "„Siehst du den Klargewordenen als Wahrnehmung an?“ … ",
   "sn22.85:8.7": "„Siehst du den Klargewordenen als Entscheidungen an?“ … ",
-  "sn22.85:8.8": "„Siehst du den Klargewordenen als Bewusstsein an?“ "
+  "sn22.85:8.8": "„Siehst du den Klargewordenen als Bewusstsein an?“ ",
+  "sn22.85:8.9": "„Nein, werter Freund.“ "
 }
