--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.85:8.7": "„Siehst du den Klargewordenen als Entscheidungen an?“ … ",
   "sn22.85:8.8": "„Siehst du den Klargewordenen als Bewusstsein an?“ ",
   "sn22.85:8.9": "„Nein, werter Freund.“ ",
-  "sn22.85:9.1": "„Was denkst du, werter Yamaka? "
+  "sn22.85:9.1": "„Was denkst du, werter Yamaka? ",
+  "sn22.85:9.2": "Siehst du den Klargewordenen als in der Form an?“ "
 }
