--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -42,6 +42,6 @@
   "sn22.85:9.1": "„Was denkst du, werter Yamaka? ",
   "sn22.85:9.2": "Siehst du den Klargewordenen als in der Form an?“ ",
   "sn22.85:9.3": "„Nein, werter Freund.“ ",
-  "sn22.85:9.4": "„Oder siehst du den Klargewordenen als getrennt von Form an?“ ",
+  "sn22.85:9.4": "„Oder siehst du den Klargewordenen als von Form getrennt an?“ ",
   "sn22.85:9.5": "„Nein, werter Freund.“ "
 }
