--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.49_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "sn22.49:4.9": "„Ist Gefühl … ",
   "sn22.49:4.11": "Wahrnehmung … ",
   "sn22.49:4.12": "Sind Entscheidungen … ",
-  "sn22.49:4.13": "„Ist Bewusstsein beständig oder unbeständig?“ ",
+  "sn22.49:4.13": "Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.49:4.14": "„Unbeständig, Herr.“ ",
   "sn22.49:4.15": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
   "sn22.49:4.16": "„Leiden, Herr.“ ",
