Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.79_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "sn22.79:11.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.79:11.8": "„Nein, Herr.“ ",
   "sn22.79:11.9": "„Ist Gefühl … ",
-  "sn22.79:11.10": "„Ist Wahrnehmung …“ … ",
+  "sn22.79:11.10": "Wahrnehmung … ",
   "sn22.79:11.11": "„Sind Entscheidungen …“ … ",
   "sn22.79:11.12": "„Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.79:11.13": "„Unbeständig, Herr.“ ",
