Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn109_translation-de-sabbamitta.json
@@ -93,7 +93,7 @@
   "mn109:15.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "mn109:15.8": "„Nein, Herr.“ ",
   "mn109:16.1": "„Was denkt ihr, Mönche? ",
-  "mn109:16.2": "„Ist Gefühl …“ … ",
+  "mn109:16.2": "„Ist Gefühl … ",
   "mn109:16.3": "„Ist Wahrnehmung …“ … ",
   "mn109:16.4": "„Sind Entscheidungen …“ … ",
   "mn109:16.5": "„Ist Bewusstsein beständig oder unbeständig?“ ",
