--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "sn22.85:7.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.85:7.3": "„Unbeständig, werter Freund.“ ",
   "sn22.85:7.4": "„Ist Gefühl … ",
-  "sn22.85:7.5": "„Ist Wahrnehmung …“ … ",
+  "sn22.85:7.5": "Wahrnehmung … ",
   "sn22.85:7.6": "„Sind Entscheidungen …“ … ",
   "sn22.85:7.7": "„Ist Bewusstsein beständig oder unbeständig?“ ",
   "sn22.85:7.8": "„Unbeständig, werter Freund.“ ",
