--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -46,5 +46,6 @@
   "sn22.85:9.5": "„Nein, werter Freund.“ ",
   "sn22.85:9.6": "„Siehst du den Klargewordenen als im Gefühl an … ",
   "sn22.85:9.7": "oder als vom Gefühl getrennt … ",
-  "sn22.85:9.8": "als in der Wahrnehmung … "
+  "sn22.85:9.8": "als in der Wahrnehmung … ",
+  "sn22.85:9.9": "oder als von der Wahrnehmung getrennt … "
 }
