Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.85:9.6": "„Siehst du den Klargewordenen als im Gefühl an … ",
   "sn22.85:9.7": "oder als vom Gefühl getrennt … ",
   "sn22.85:9.8": "als in der Wahrnehmung … ",
-  "sn22.85:9.9": "oder als von der Wahrnehmung getrennt … "
+  "sn22.85:9.9": "oder als von der Wahrnehmung getrennt … ",
+  "sn22.85:9.10": "als in Entscheidungen … "
 }
