--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -48,5 +48,6 @@
   "sn22.85:9.7": "oder als vom Gefühl getrennt … ",
   "sn22.85:9.8": "als in der Wahrnehmung … ",
   "sn22.85:9.9": "oder als von der Wahrnehmung getrennt … ",
-  "sn22.85:9.10": "als in Entscheidungen … "
+  "sn22.85:9.10": "als in Entscheidungen … ",
+  "sn22.85:9.11": "oder als von Entscheidungen getrennt … "
 }
