Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -50,5 +50,6 @@
   "sn22.85:9.9": "oder als von der Wahrnehmung getrennt … ",
   "sn22.85:9.10": "als in Entscheidungen … ",
   "sn22.85:9.11": "oder als von Entscheidungen getrennt … ",
-  "sn22.85:9.12": "Siehst du den Klargewordenen als im Bewusstsein an?“ "
+  "sn22.85:9.12": "Siehst du den Klargewordenen als im Bewusstsein an?“ ",
+  "sn22.85:9.13": "„Nein, werter Freund.“ "
 }
