--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "sn22.85:9.12": "Siehst du den Klargewordenen als im Bewusstsein an?“ ",
   "sn22.85:9.13": "„Nein, werter Freund.“ ",
   "sn22.85:9.14": "„Oder siehst du den Klargewordenen als vom Bewusstsein getrennt an?“ ",
-  "sn22.85:9.15": "„Nein, werter Freund.“ "
+  "sn22.85:9.15": "„Nein, werter Freund.“ ",
+  "sn22.85:10.1": "„Was denkst du, werter Yamaka? "
 }
