Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "sn22.85:9.13": "„Nein, werter Freund.“ ",
   "sn22.85:9.14": "„Oder siehst du den Klargewordenen als vom Bewusstsein getrennt an?“ ",
   "sn22.85:9.15": "„Nein, werter Freund.“ ",
-  "sn22.85:10.1": "„Was denkst du, werter Yamaka? "
+  "sn22.85:10.1": "„Was denkst du, werter Yamaka? ",
+  "sn22.85:10.2": "Siehst du den Klargewordenen als jemanden an, der Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein besitzt?“ "
 }
