--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "sn22.85:11.3": "„Nein, werter Freund.“ ",
   "sn22.85:11.4": "„In diesem Fall, werter Yamaka, da du den Klargewordenen in diesem Leben nicht als Tatsache annimmst, ist es da angemessen, zu erklären: ",
   "sn22.85:11.5": "‚Wie ich die Lehre des Buddha verstehe, wird ein Mönch, der die Befleckungen aufgelöst hat, vernichtet und zerstört, wenn sein Körper auseinanderbricht, und besteht nach dem Tod nicht fort‘?“",
-  "sn22.85:12.1": "„Werter Sāriputta, in meiner Unwissenheit hatte ich früher diesen Irrglauben. "
+  "sn22.85:12.1": "„Werter Sāriputta, in meiner Unwissenheit hatte ich früher diesen Irrglauben. ",
+  "sn22.85:12.2": "Aber jetzt, da ich diese Unterweisung vom Ehrwürdigen Sāriputta gehört habe, habe ich die Lehre erfasst.“ "
 }
