--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -65,5 +65,6 @@
   "sn22.85:12.1": "„Werter Sāriputta, in meiner Unwissenheit hatte ich früher diesen Irrglauben. ",
   "sn22.85:12.2": "Aber jetzt, da ich diese Unterweisung vom Ehrwürdigen Sāriputta gehört habe, habe ich die Lehre erfasst.“ ",
   "sn22.85:13.1": "„Werter Yamaka, angenommen, du würdest gefragt: ",
-  "sn22.85:13.2": "‚Was geschieht mit einem Mönch, der die Befleckungen aufgelöst hat, wenn sein Körper auseinanderbricht, nach dem Tod?‘ "
+  "sn22.85:13.2": "‚Was geschieht mit einem Mönch, der die Befleckungen aufgelöst hat, wenn sein Körper auseinanderbricht, nach dem Tod?‘ ",
+  "sn22.85:13.3": "Wie würdest du antworten?“ "
 }
