--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -66,5 +66,6 @@
   "sn22.85:12.2": "Aber jetzt, da ich diese Unterweisung vom Ehrwürdigen Sāriputta gehört habe, habe ich die Lehre erfasst.“ ",
   "sn22.85:13.1": "„Werter Yamaka, angenommen, du würdest gefragt: ",
   "sn22.85:13.2": "‚Was geschieht mit einem Mönch, der die Befleckungen aufgelöst hat, wenn sein Körper auseinanderbricht, nach dem Tod?‘ ",
-  "sn22.85:13.3": "Wie würdest du antworten?“ "
+  "sn22.85:13.3": "Wie würdest du antworten?“ ",
+  "sn22.85:13.4": "„Werter Freund, wenn ich so gefragt würde, "
 }
