Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "sn22.85:13.2": "‚Was geschieht mit einem Mönch, der die Befleckungen aufgelöst hat, wenn sein Körper auseinanderbricht, nach dem Tod?‘ ",
   "sn22.85:13.3": "Wie würdest du antworten?“ ",
   "sn22.85:13.4": "„Werter Freund, wenn ich so gefragt würde, ",
-  "sn22.85:13.6": "würde ich antworten: "
+  "sn22.85:13.6": "würde ich antworten: ",
+  "sn22.85:13.7": "‚Werter Freund, Form ist unbeständig. "
 }
