Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -71,5 +71,6 @@
   "sn22.85:13.6": "würde ich antworten: ",
   "sn22.85:13.7": "‚Werter Freund, Form ist unbeständig. ",
   "sn22.85:13.8": "Was unbeständig ist, ist Leiden. ",
-  "sn22.85:13.9": "Was Leiden ist, hat aufgehört und ist zu Ede gegangen. "
+  "sn22.85:13.9": "Was Leiden ist, hat aufgehört und ist zu Ede gegangen. ",
+  "sn22.85:13.10": "Gefühl … "
 }
