--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -75,5 +75,6 @@
   "sn22.85:13.10": "Gefühl … ",
   "sn22.85:13.11": "Wahrnehmung … ",
   "sn22.85:13.12": "Entscheidungen … ",
-  "sn22.85:13.13": "Bewusstsein ist unbeständig. "
+  "sn22.85:13.13": "Bewusstsein ist unbeständig. ",
+  "sn22.85:13.14": "Was unbeständig ist, ist Leiden. "
 }
