Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.85_translation-de-sabbamitta.json
@@ -78,5 +78,6 @@
   "sn22.85:13.13": "Bewusstsein ist unbeständig. ",
   "sn22.85:13.14": "Was unbeständig ist, ist Leiden. ",
   "sn22.85:13.15": "Was Leiden ist, hat aufgehört und ist zu Ede gegangen.‘ ",
-  "sn22.85:13.16": "So würde ich eine solche Frage beantworten.“ "
+  "sn22.85:13.16": "So würde ich eine solche Frage beantworten.“ ",
+  "sn22.85:14.1": "„Gut, gut, werter Yamaka! "
 }
