--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -28,7 +28,7 @@
   "pli-tv-kd14:2.1.3": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.4": "An individual who speaks contrary to the Teaching persuades several people who speak in accordance with the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
   "pli-tv-kd14:2.1.5": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.6": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.6": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.7": "An individual who speaks contrary to the Teaching persuades a sangha that speaks in accordance with the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:2.1.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.9": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
