--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -31,19 +31,19 @@
   "pli-tv-kd14:2.1.6": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.7": "An individual who speaks contrary to the Teaching persuades a sangha that speaks in accordance with the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:2.1.8": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.9": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.9": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.10": "Several people who speak contrary to the Teaching persuade an individual who speaks in accordance with the Teaching—convince him, make him see, make him consider, show him, teach him: ",
   "pli-tv-kd14:2.1.11": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.12": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.12": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.13": "Several people who speak contrary to the Teaching persuade several people who speak in accordance with the Teaching—convince them, make them see, make them consider, show them, teach them: ",
   "pli-tv-kd14:2.1.14": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.15": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.15": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.16": "Several people who speak contrary to the Teaching persuade a sangha that speaks in accordance with the Teaching—convince it, make it see, make it consider, show it, teach it: ",
   "pli-tv-kd14:2.1.17": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.18": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.18": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.19": "A sangha that speaks contrary to the Teaching persuades an individual who speaks in accordance with the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
   "pli-tv-kd14:2.1.20": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:2.1.21": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
+  "pli-tv-kd14:2.1.21": "If a legal issue is resolved like this, it's resolved illegitimately by a face-to-face-like resolution. ",
   "pli-tv-kd14:2.1.22": "A sangha that speaks contrary to the Teaching persuades several people who speak in accordance with the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
   "pli-tv-kd14:2.1.23": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
   "pli-tv-kd14:2.1.24": "If a legal issue is resolved like this, it is resolved illegitimately by a face-to-face-like resolution. ",
