Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -69,16 +69,16 @@
   "pli-tv-kd14:3.1.15": "If a legal issue is resolved like this, it's resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.16": "Several people who speak in accordance with the Teaching persuade a sangha that speaks contrary to the Teaching—convince it, make it see, make it consider, show it, teach it: ",
   "pli-tv-kd14:3.1.17": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.18": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
+  "pli-tv-kd14:3.1.18": "If a legal issue is resolved like this, it's resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.19": "A sangha that speaks in accordance with the Teaching persuades an individual who speaks contrary to the Teaching—convinces him, makes him see, makes him consider, shows him, teaches him: ",
   "pli-tv-kd14:3.1.20": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.21": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
+  "pli-tv-kd14:3.1.21": "If a legal issue is resolved like this, it's resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.22": "A sangha that speaks in accordance with the Teaching persuades several people who speak contrary to the Teaching—convinces them, makes them see, makes them consider, shows them, teaches them: ",
   "pli-tv-kd14:3.1.23": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.24": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution. ",
+  "pli-tv-kd14:3.1.24": "If a legal issue is resolved like this, it's resolved legitimately by face-to-face resolution. ",
   "pli-tv-kd14:3.1.25": "A sangha that speaks in accordance with the Teaching persuades a sangha that speaks contrary to the Teaching—convinces it, makes it see, makes it consider, shows it, teaches it: ",
   "pli-tv-kd14:3.1.26": "‘This is the Teaching, this is the Monastic Law, this is the Teacher’s instruction; learn this, accept this.’ ",
-  "pli-tv-kd14:3.1.27": "If a legal issue is resolved like this, it is resolved legitimately by face-to-face resolution.” ",
+  "pli-tv-kd14:3.1.27": "If a legal issue is resolved like this, it's resolved legitimately by face-to-face resolution.” ",
   "pli-tv-kd14:3.1.28": "The group of nine on the bright side is finished. ",
   "pli-tv-kd14:4.1.0": "2. Resolution through recollection ",
   "pli-tv-kd14:4.1.1": "At one time when the Buddha was staying at Rājagaha in the Bamboo Grove, ",
