--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -167,7 +167,7 @@
   "pli-tv-kd14:4.6.6": "He approached Dabba, bowed, and sat down. ",
   "pli-tv-kd14:4.6.7": "Dabba instructed, inspired, and gladdened him with a teaching. ",
   "pli-tv-kd14:4.6.8": "After the talk, he asked Dabba, ",
-  "pli-tv-kd14:4.6.9": "“Sir, who has been designated to receive tomorrow’s meal in our house?” ",
+  "pli-tv-kd14:4.6.9": "“Sir, who's been designated to receive tomorrow’s meal in our house?” ",
   "pli-tv-kd14:4.6.10": "“Mettiya and Bhūmajaka.” ",
   "pli-tv-kd14:4.6.11": "He was disappointed, ",
   "pli-tv-kd14:4.6.12": "and thought, “Why should bad monks eat in our house?” After returning to his house, he told a female slave, ",
