Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -413,14 +413,14 @@
   "pli-tv-kd14:6.2.26": "This is allowable for me, ",
   "pli-tv-kd14:6.2.27": "and also for you.’ ",
   "pli-tv-kd14:6.2.28": "If the Sangha grants him resolution because of past insanity, ",
-  "pli-tv-kd14:6.2.29": "then that granting is legitimate. ",
-  "pli-tv-kd14:6.2.30": "These are the three legitimate grantings of resolution because of past insanity.” ",
+  "pli-tv-kd14:6.2.29": "then that granting is legitimate.” ",
+  "pli-tv-kd14:6.2.30": "",
   "pli-tv-kd14:7.1.0": "4. Acting according to what has been admitted ",
   "pli-tv-kd14:7.1.1": "At one time the monks from the group of six did legal procedures—",
   "pli-tv-kd14:7.1.2": "condemnation, demotion, banishment, reconciliation, and ejection—against other monks without their admission. ",
   "pli-tv-kd14:7.1.3": "The monks of few desires complained and criticized them, ",
   "pli-tv-kd14:7.1.4": "“How can the monks from the group of six do this?” ",
-  "pli-tv-kd14:7.1.6": "They told the Buddha. Soon afterwards he had the Sangha of monks gathered and questioned them: ",
+  "pli-tv-kd14:7.1.6": "They told the Buddha. … ",
   "pli-tv-kd14:7.1.7": "“Is it true, monks, that the monks from the group of six are doing this?” ",
   "pli-tv-kd14:7.1.8": "“It’s true, Sir.” … ",
   "pli-tv-kd14:7.1.9": "After rebuking them … ",
@@ -428,17 +428,17 @@
   "pli-tv-kd14:7.1.11": "“You shouldn’t do legal procedures—",
   "pli-tv-kd14:7.1.12": "condemnation, demotion, banishment, reconciliation, or ejection—against monks without their admission. ",
   "pli-tv-kd14:7.1.13": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd14:8.1.2": "“And how is acting according to what has been admitted illegitimate? ",
+  "pli-tv-kd14:8.1.2": "And how’s acting according to what has been admitted illegitimate? ",
   "pli-tv-kd14:8.1.3": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.1.4": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.5": "‘Venerable, haven’t committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.1.5": "‘Venerable, you've committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.6": "He says, ",
   "pli-tv-kd14:8.1.7": "‘I haven’t committed an offense entailing expulsion, but one entailing suspension.’ ",
   "pli-tv-kd14:8.1.8": "If the Sangha makes him act according to an offense entailing suspension, ",
   "pli-tv-kd14:8.1.9": "then that acting according to what has been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.10": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.1.11": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.12": "‘Venerable, haven’t committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.1.12": "‘Venerable, you've committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.13": "He says, ",
   "pli-tv-kd14:8.1.14": "‘I haven’t committed an offense entailing expulsion, but a serious offense … ",
   "pli-tv-kd14:8.1.15": "but an offense entailing confession … ",
@@ -454,14 +454,14 @@
   "pli-tv-kd14:8.1.25": "an offense of wrong conduct … ",
   "pli-tv-kd14:8.1.26": "an offense of wrong speech. ",
   "pli-tv-kd14:8.1.27": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.28": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.1.28": "‘Venerable, you've committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.1.29": "He says, ",
   "pli-tv-kd14:8.1.30": "‘I haven’t committed an offense of wrong speech, but an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.1.31": "If the Sangha makes him act according to an offense entailing expulsion, ",
   "pli-tv-kd14:8.1.32": "then that acting according to what has been admitted is illegitimate. ",
   "pli-tv-kd14:8.1.33": "It may be that a monk has committed an offense of wrong speech. ",
   "pli-tv-kd14:8.1.34": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.1.35": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.1.35": "‘Venerable, you've committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.1.36": "He says, ",
   "pli-tv-kd14:8.1.37": "‘I haven’t committed an offense of wrong speech, but an offense entailing suspension … ",
   "pli-tv-kd14:8.1.38": "but a serious offense … ",
@@ -470,10 +470,10 @@
   "pli-tv-kd14:8.1.41": "but an offense of wrong conduct.’ ",
   "pli-tv-kd14:8.1.42": "If the Sangha makes him act according to an offense of wrong conduct, ",
   "pli-tv-kd14:8.1.43": "then that acting according to what has been admitted is illegitimate. ",
-  "pli-tv-kd14:8.2.2": "“And how is acting according to what has been admitted legitimate? ",
+  "pli-tv-kd14:8.2.2": "And how’s acting according to what has been admitted legitimate? ",
   "pli-tv-kd14:8.2.3": "It may be that a monk has committed an offense entailing expulsion. ",
   "pli-tv-kd14:8.2.4": "The Sangha, several monks, or a single monk accuses him, saying ",
-  "pli-tv-kd14:8.2.5": "‘Venerable, haven’t committed an offense entailing expulsion.’ ",
+  "pli-tv-kd14:8.2.5": "‘Venerable, you've committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.2.6": "He says, ",
   "pli-tv-kd14:8.2.7": "‘Yes, I’ve committed an offense entailing expulsion.’ ",
   "pli-tv-kd14:8.2.8": "If the Sangha makes him act according to an offense entailing expulsion, ",
@@ -485,7 +485,7 @@
   "pli-tv-kd14:8.2.14": "an offense of wrong conduct … ",
   "pli-tv-kd14:8.2.15": "an offense of wrong speech. ",
   "pli-tv-kd14:8.2.16": "The Sangha, several monks, or a single monk accuses him, saying, ",
-  "pli-tv-kd14:8.2.17": "‘Venerable, haven’t committed an offense of wrong speech.’ ",
+  "pli-tv-kd14:8.2.17": "‘Venerable, you’ve committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.2.18": "He says, ",
   "pli-tv-kd14:8.2.19": "‘Yes, I’ve committed an offense of wrong speech.’ ",
   "pli-tv-kd14:8.2.20": "If the Sangha makes him act according to an offense wrong speech, ",
