Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -671,7 +671,7 @@
   "pli-tv-kd14:14.1.7": "After rebuking him … ",
   "pli-tv-kd14:14.1.8": "the Buddha gave a teaching and addressed the monks: ",
   "pli-tv-kd14:14.2.1": "“Monks, there are four kinds of legal issues: legal issues arising from disputes; legal issues arising from accusations; legal issues arising from offenses; legal issues arising from business. ",
-  "pli-tv-kd14:14.2.2": "(1a) What is a legal issue arising from a dispute? ",
+  "pli-tv-kd14:14.2.2": "(1a) What’s a legal issue arising from a dispute? ",
   "pli-tv-kd14:14.2.3": "It may be that the monks are disputing, saying, ",
   "pli-tv-kd14:14.2.4": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This was not spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This was not practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This was not laid down by the Buddha’, ‘This is an offense’, ‘This is not an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.2.5": "In regard to this, whatever quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife there is—",
