Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -676,11 +676,11 @@
   "pli-tv-kd14:14.2.4": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.2.5": "In regard to this, whatever there is of quarreling, arguing, conflict, disputing, variety in opinion, difference in opinion, heated speech, or strife—",
   "pli-tv-kd14:14.2.6": "this is called a legal issue arising from a dispute. ",
-  "pli-tv-kd14:14.2.7": "(1b) What is a legal issue arising from an accusation? ",
+  "pli-tv-kd14:14.2.7": "(1b) What’s a legal issue arising from an accusation? ",
   "pli-tv-kd14:14.2.8": "It may be that the monks accuse a monk of failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
-  "pli-tv-kd14:14.2.9": "In regard to this, whatever accusation, accusing, allegation, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation there is—",
+  "pli-tv-kd14:14.2.9": "In regard to this, whatever there is of accusations, accusing, allegations, blame, taking sides because of friendship, taking part in the accusation, or supporting the accusation—",
   "pli-tv-kd14:14.2.10": "this is called a legal issue arising from an accusation. ",
-  "pli-tv-kd14:14.2.11": "(1c) What is a legal issue arising from an offense? ",
+  "pli-tv-kd14:14.2.11": "(1c) What’s a legal issue arising from an offense? ",
   "pli-tv-kd14:14.2.12": "There are legal issues arising from offenses because of the five classes of offenses; there are legal issues arising from offenses because of the seven classes of offenses—",
   "pli-tv-kd14:14.2.13": "this is called a legal issue arising from an offense. ",
   "pli-tv-kd14:14.2.14": "(1d) What is a legal issue arising from business? ",
