Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -683,7 +683,7 @@
   "pli-tv-kd14:14.2.11": "(1c) What’s a legal issue arising from an offense? ",
   "pli-tv-kd14:14.2.12": "There are legal issues arising from offenses because of the five classes of offenses; there are legal issues arising from offenses because of the seven classes of offenses—",
   "pli-tv-kd14:14.2.13": "this is called a legal issue arising from an offense. ",
-  "pli-tv-kd14:14.2.14": "(1d) What is a legal issue arising from business? ",
+  "pli-tv-kd14:14.2.14": "(1d) What’s a legal issue arising from business? ",
   "pli-tv-kd14:14.2.15": "Whatever is the duty or the business of the Sangha—a legal procedure consisting of getting permission, a legal procedure consisting of one motion, a legal procedure consisting of one motion and one announcement, a legal procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.2.16": "this is called a legal issue arising from business. ",
   "pli-tv-kd14:14.3.1": "(2a) What is the root of legal issues arising from disputes? ",
