Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -686,12 +686,12 @@
   "pli-tv-kd14:14.2.14": "(1d) What’s a legal issue arising from business? ",
   "pli-tv-kd14:14.2.15": "Whatever is the duty or the business of the Sangha—a legal procedure consisting of getting permission, a legal procedure consisting of one motion, a legal procedure consisting of one motion and one announcement, a legal procedure consisting of one motion and three announcements—",
   "pli-tv-kd14:14.2.16": "this is called a legal issue arising from business. ",
-  "pli-tv-kd14:14.3.1": "(2a) What is the root of legal issues arising from disputes? ",
+  "pli-tv-kd14:14.3.1": "(2a) What’s the root of legal issues arising from disputes? ",
   "pli-tv-kd14:14.3.2": "There are six roots of disputes that in turn are the root of legal issues arising from disputes. ",
   "pli-tv-kd14:14.3.3": "There are also three unwholesome and three wholesome roots of legal issues arising from disputes. ",
   "pli-tv-kd14:14.3.4": "What are the six roots of disputes that in turn are the root of legal issues arising from disputes? ",
   "pli-tv-kd14:14.3.5": "It may be that a monk is angry and resentful. ",
-  "pli-tv-kd14:14.3.6": "One who is angry and resentful is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
+  "pli-tv-kd14:14.3.6": "One who’s angry and resentful is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
   "pli-tv-kd14:14.3.7": "Such a person ",
   "pli-tv-kd14:14.3.9": "creates disputes in the Sangha. ",
   "pli-tv-kd14:14.3.10": "Disputes are unbeneficial and a cause of unhappiness for humanity; they are harmful, detrimental, and a cause of suffering for gods and humans. ",
