Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -707,11 +707,11 @@
   "pli-tv-kd14:14.3.21": "Disputes are unbeneficial and a cause of unhappiness for humanity; they’re harmful, detrimental, and a cause of suffering for gods and humans. ",
   "pli-tv-kd14:14.3.22": "Monks, when you see such a root of disputes either in yourself or others, you should make an effort to get rid of it. ",
   "pli-tv-kd14:14.3.23": "If you don’t see such a root either in yourself or others, you should practice so that it doesn’t emerge in the future. ",
-  "pli-tv-kd14:14.3.24": "In this way that bad root of disputes is abandoned. ",
-  "pli-tv-kd14:14.3.25": "In this way that bad root of disputes has no future effect. ",
+  "pli-tv-kd14:14.3.24": "In this way that bad root of disputes is abandoned ",
+  "pli-tv-kd14:14.3.25": "and doesn’t emerge in the future. ",
   "pli-tv-kd14:14.4.1": "What are the three unwholesome roots of legal issues arising from disputes? ",
-  "pli-tv-kd14:14.4.2": "It may be that monks dispute with a mind of greed, with a mind of ill will, with a mind of delusion, saying, ",
-  "pli-tv-kd14:14.4.3": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This was not spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This was not practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This was not laid down by the Buddha’, ‘This is an offense’, ‘This is not an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
+  "pli-tv-kd14:14.4.2": "It may be that monks dispute with a mind of greed, ill will, or delusion, saying, ",
+  "pli-tv-kd14:14.4.3": "‘This is the Teaching’, ‘This is contrary to the Teaching’, ‘This is the Monastic Law’, ‘This is contrary to the Monastic Law’, ‘This was spoken by the Buddha’, ‘This wasn’t spoken by the Buddha’, ‘This was practiced by the Buddha’, ‘This wasn’t practiced by the Buddha’, ‘This was laid down by the Buddha’, ‘This wasn’t laid down by the Buddha’, ‘This is an offense’, ‘This isn’t an offense’, ‘This is a light offense’, ‘This is a heavy offense’, ‘This is a curable offense’, ‘This is an incurable offense’, ‘This is a grave offense’, or ‘This is a minor offense.’ ",
   "pli-tv-kd14:14.4.5": "What are the three wholesome roots of legal issues arising from disputes? ",
   "pli-tv-kd14:14.4.6": "It may be that monks dispute with a mind free from greed, free from ill will, free from delusion, saying, ",
   "pli-tv-kd14:14.4.7": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
