Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -716,9 +716,9 @@
   "pli-tv-kd14:14.4.6": "It may be that monks dispute with a mind free from greed, ill will, and delusion, saying, ",
   "pli-tv-kd14:14.4.7": "‘This is the Teaching’, ‘This is contrary to the Teaching’ … ",
   "pli-tv-kd14:14.4.8": "‘This is a grave offense’, or ‘This is a minor offense.’ ",
-  "pli-tv-kd14:14.5.1": "(2b) What is the root of legal issues arising from accusations? ",
+  "pli-tv-kd14:14.5.1": "(2b) What’s the root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.2": "There are six roots of accusations that in turn are the root of legal issues arising from accusations. ",
-  "pli-tv-kd14:14.5.3": "There are also three unwholesome and three wholesome roots of legal issues arising from accusations. The body, too, is a root of legal issues arising from accusations, and so is speech. ",
+  "pli-tv-kd14:14.5.3": "There are also three unwholesome and three wholesome roots of legal issues arising from accusations. The body, too, is a root of legal issues arising from accusations, as is speech. ",
   "pli-tv-kd14:14.5.4": "What are the six roots of accusations that in turn are the root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.5": "It may be that a monk is angry and resentful. ",
   "pli-tv-kd14:14.5.6": "One who is angry and resentful is disrespectful and undeferential toward the Teacher, the Teaching, and the Sangha, and he doesn’t fulfill the training. ",
