Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -734,7 +734,7 @@
   "pli-tv-kd14:14.5.20": "makes accusations in the Sangha. ",
   "pli-tv-kd14:14.5.21": "Accusations are unbeneficial and a cause of unhappiness for humanity; they’re harmful, detrimental, and a cause of suffering for gods and humans. ",
   "pli-tv-kd14:14.5.22": "Monks, when you see such a root of accusations either in yourself or others, you should make an effort to get rid of it. ",
-  "pli-tv-kd14:14.5.23": "If you don’t see such a root either in yourself or in others, you should practice so that it doesn’t reappear in the future. ",
+  "pli-tv-kd14:14.5.23": "If you don’t see such a root either in yourself or others, you should practice so that it doesn’t emerge in the future. ",
   "pli-tv-kd14:14.5.27": "What are the three unwholesome roots of accusations? ",
   "pli-tv-kd14:14.5.28": "It may be that monks, because of greed, because of ill will, because of delusion, accuse others of ",
   "pli-tv-kd14:14.5.29": "failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
