Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd14_translation-en-brahmali.json
@@ -736,11 +736,11 @@
   "pli-tv-kd14:14.5.22": "Monks, when you see such a root of accusations either in yourself or others, you should make an effort to get rid of it. ",
   "pli-tv-kd14:14.5.23": "If you don’t see such a root either in yourself or others, you should practice so that it doesn’t emerge in the future. ",
   "pli-tv-kd14:14.5.27": "What are the three unwholesome roots of accusations? ",
-  "pli-tv-kd14:14.5.28": "It may be that monks, because of greed, because of ill will, because of delusion, accuse others of ",
-  "pli-tv-kd14:14.5.29": "failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
+  "pli-tv-kd14:14.5.28": "It may be that monks, because of greed, ill will, or delusion, accuse a monk of ",
+  "pli-tv-kd14:14.5.29": "failure in morality, conduct, view, or livelihood. ",
   "pli-tv-kd14:14.5.31": "What are the three wholesome roots of accusations? ",
-  "pli-tv-kd14:14.5.32": "It may be that monks, because of non-greed, because of non-ill will, because of non-delusion, accuse others of ",
-  "pli-tv-kd14:14.5.33": "failure in morality, failure in conduct, failure in view, or failure in livelihood. ",
+  "pli-tv-kd14:14.5.32": "It may be that monks, because of non-greed, non-ill will, and non-delusion, accuse a monk of ",
+  "pli-tv-kd14:14.5.33": "failure in morality, conduct, view, or livelihood. ",
   "pli-tv-kd14:14.5.35": "How is the body a root of legal issues arising from accusations? ",
   "pli-tv-kd14:14.5.36": "It may be that someone is ugly, unsightly, a dwarf, sickly, blind in one eye, crooked-limbed, lame, or paralyzed, and they blame him for that. ",
   "pli-tv-kd14:14.5.38": "How is speech a root of legal issues arising from accusations? ",
